--- a/promtail/promtail.yaml
+++ b/promtail/promtail.yaml
@@ -3,7 +3,6 @@ server:
   grpc_listen_port: 0
   log_level: debug
 
-
 positions:
   filename: /tmp/positions.yaml
 
@@ -22,7 +21,8 @@ scrape_configs:
       - multiline:
           firstline: '^\d{4}-\d{2}-\d{2}'
       - regex:
-          expression: '.*\[(?P<jail>[^\]]+)\].*'
+          expression: >
+            ^(?P<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}),\d+\s+fail2ban\.(?P<component>\S+)\s+\[(?P<pid>\d+)\]:\s+(?P<level>\S+)(?:\s+\[(?P<jail>[^\]]+)\])?\s+(?P<msg>.*)$
       - timestamp:
           source: time
           format: '2006-01-02 15:04:05'
@@ -31,6 +31,5 @@ scrape_configs:
           pid: pid
           level: level
           jail: jail
-      - stdout: {}
       - output:
           source: msg
