--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on:
   push:
-    branches: [main, develop, feature/*]
+    branches: [main, develop, feature/*, fix/*]
   pull_request:
     branches: [main, develop]
 
